<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_archive"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_archive"/>
    <item
        android:id="@+id/action_toggle_show_archive"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_show_archive"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_email_selection"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_email_selection"/>
    <item
        android:id="@+id/action_email_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_email_all"/>
	<item
	        android:id="@+id/action_summary"
	        android:orderInCategory="100"
	        android:showAsAction="never"
	        android:title="@string/action_summary"/>
</menu>
